--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -36,6 +36,7 @@
 \usepackage{mathptmx}   % Times + Times-like math symbols
 \usepackage{courier}
 \usepackage[scaled=0.92]{helvet}
+\usepackage{amsmath}
 
 \usepackage{color}
 \usepackage[pdftex]{graphicx}
