--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -48,7 +48,8 @@
 \newcommand{\URL}[1]{\url{#1}}
 
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows}
+\usepackage{adjustbox}
+\usetikzlibrary{shapes,arrows,calc,positioning}
 
 %%%%% Setup for PDF
 \hypersetup{%
@@ -131,8 +132,7 @@ bookmarksopen = {true}
 \begin{document}
 \maketitle
 
-\tikzstyle{block} = [rectangle, draw, fill=blue!20, 
-    text width=3em, text centered, rounded corners, minimum height=2em]
+\tikzstyle{block} = [rectangle, draw, fill=blue!20, text centered, rounded corners, minimum height=2em]
 
 \input{abstract}   
 \input{intro}
