--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -12,7 +12,7 @@ against MITM attacks for static content. vHTTP uses the concept of vantage
 points to obtain multiple perspectives on what the actual response to a given
 HTTP request should be, and then attempts to find consensus among those
 perspectives. A response, if any, that has consensus among the different
-vantange points is sent back to the user. Through this mechanism, the user can
+vantage points is sent back to the user. Through this mechanism, the user can
 gain confidence to the validity of the response even if they are restricted to
 using HTTP.
 
