--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,60 @@
 
-@techreport{empty-citation,
+@article{Hotpets17,
+  author = "Henry Birge-Lee and Yixin Sun and Annie Edmundson and Jennifer Rexford and Prateek Mittal",
+  title = {{Using BGP to Acquire Bogus TLS Certificates}},
+  year = {2017},
+  }
+
+@inproceedings{Perspectives,
+  author = "Dan Wendlandt and David G. Andersen and Adrian Perrig",
+  title = {{Perspectives: Improving SSH-style Host Authentication with Multi-Path Probing}},
+  booktitle = {{USENIX '08: 2008 USENIX Annual Technical Conference}},
+  publisher = {USENIX Association},
+  year = {2008},
+  }
+
+@inproceedings{ConfiDNS,
+ author = {Poole, Lindsey and Pai, Vivek S.},
+ title = {{ConfiDNS: Leveraging Scale and History to Improve DNS Security}},
+ booktitle = {Proceedings of the 3rd Conference on USENIX Workshop on Real, Large Distributed Systems - Volume 3},
+ series = {WORLDS'06},
+ year = {2006},
+ location = {Seattle, WA},
+ pages = {3--3},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1254840.1254843},
+ acmid = {1254843},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
+@article{MITM-Survey, 
+  author = {M. Conti and N. Dragoni and V. Lesyk}, 
+  journal = {IEEE Communications Surveys Tutorials}, 
+  title = {{A Survey of Man In The Middle Attacks}}, 
+  year = {2016}, 
+  volume = {18},
+  number = {3}, 
+  pages = {2027-2051}, 
+  keywords = {computer network security;data integrity;MITM attack prevention mechanism;computer security;data confidentiality;data integrity;impersonation technique classification;man in the middle attack;reference model;3G mobile communication;Communication channels;GSM;IP networks;Open systems;Security;Tutorials;MITM classification;MITM defence techniques;Man-In-The-Middle (MITM) attack;security}, 
+  doi = {10.1109/COMST.2016.2548426}, 
+  ISSN = {1553-877X}, 
+}
+
+@misc{HideMyName-Proxies,
+  title = {{HideMy.name: Proxy List}},
+  url = {https://hidemy.name/en/proxy-list/},
+  note = {Accessed: 2017-12-28},
+  }
+
+@misc{NordVPN-Proxies,
+  title = {{NordVPN: Free proxy list}},
+  url = {https://nordvpn.com/free-proxy-list/},
+  note = {Accessed: 2017-12-31},
+  }
+
+@misc{FreeProxyList,
+  title = {{Free Proxy List}},
+  url = {https://free-proxy-list.net/},
+  note = {Accessed: 2017-12-31},
   }
