--- a/paper/design.tex
+++ b/paper/design.tex
@@ -30,17 +30,21 @@ are different locations from which the request is performed. In other words,
 vantage points provide different perspectives on the result of a request. If
 vantage points are geographically-diverse, or located around the world, then
 performing a MITM on such content is a much more difficult task, as each
-individual vantage point must be compromised.
+individual vantage point must be compromised. The concept of vantage points
+is utilized in various applications already; it was proposed as a method to
+avoid blindly trusting the public key on first use in SSH \cite{Perspectives}
+or to prevent attacks on DNS \cite{Hotpets17, ConfiDNS}.
 
 The entire idea behind vHTTP is to utilize the general property that MITM
-attacks tend to be localized. A malicious agent can use DNS cache poisoning,
-BGP route hijacking, or act as a middle box on a specific route or subset of
-routes to a destination. However, unless performing a massive-scale attack, it
-is infeasible and unlikely that an agent can attack all of the routes to a
-destination. Agents who could feasibly perform a MITM attack on every route to
-a destination are likely targeting important content - at which point the user
-should not be accessing such content over HTTP, anyway. vHTTP is not designed
-to mitigate large-scale attacks but instead, work around localized ones.
+attacks tend to be localized \cite{MITM-Survey}. A malicious agent can use DNS
+cache poisoning, BGP AS-path poisoning \cite{Hotpets17}, or act as a middle
+box on a specific route or subset of routes to a destination. However, unless
+performing a massive-scale attack, it is infeasible and unlikely that an agent
+can attack all of the routes to a destination. Agents who could feasibly
+perform a MITM attack on every route to a destination are likely targeting
+important content - at which point the user should not be accessing such
+content over HTTP, anyway. vHTTP is not designed to mitigate large-scale
+attacks but instead, work around localized ones.
 
 vHTTP is designed to be used with minimal overhead by the user. The user should
 be able to start vHTTP, configure their client to use vHTTP as an HTTP proxy,
@@ -50,32 +54,37 @@ geographically-diverse vantage points, without the user having to set these up,
 by using existing HTTP proxies. The user provides a list of proxies to use and
 vHTTP performs the user's request through all of the provided proxies, as shown
 in Figure \ref{fig:proxy-data-flow}. There are many free HTTP proxies around
-the world, and so finding such a list is not difficult. We refer to vantage
-points and HTTP proxies interchangeably in this paper, as they are synonymous
-for our purposes. Although we desire that vantage points have this feature of
-geographic diversity, vHTTP cannot easily enforce that and does not attempt to.
-Instead, we hope that users will use vantage points that do share this feature
-so that they can obtain a greater confidence in the shared response.
+the world, and so finding such a list is not difficult
+\cite{HideMyName-Proxies, NordVPN-Proxies, FreeProxyList}.
+
+We refer to vantage points and HTTP proxies interchangeably in this paper, as
+they are synonymous for our purposes. Although we desire that vantage points
+have this feature of geographic diversity, vHTTP cannot easily enforce that
+and does not attempt to. Instead, we hope that users will use vantage points
+that do share this feature so that they can obtain a greater confidence in the
+shared response.
 
 \input{figures/proxy-data-flow}
 
 \subsection{Response Consensus}
 
-Each request routed through a vantange point is stored until all of the
+Each request routed through a vantage point is stored until all of the
 vantage points have either responded or failed. Then, the $N$ responses are
-checked for a \textit{consensus}. Consensus occurs when at least a
-user-specified threshold, $T$, of the responses agree. Responses $R_i$ and
-$R_j$ agree if $H(R_i) = H(R_j)$ where $H$ is a hash function of our choosing.
-This agreement can be extended to any $n$ responses; that is, responses
-$R_1, R_2, ..., R_n$ all agree if $H(R_i) = H(R_j) \forall i, j \in \{1...n\}$.
+checked for a \textit{consensus} \cite{Perspectives}. A successful consensus
+occurs when at least a user-specified threshold, $T$, of the responses agree.
+Responses $R_i$ and $R_j$ agree if $H(R_i) = H(R_j)$ where $H$ is a hash
+function of our choosing. This agreement can be extended to any $n$ responses;
+that is, responses $R_1, R_2, ..., R_n$ all agree if
+$H(R_i) = H(R_j) \forall i, j \in \{1...n\}$.
 
-Thus, a consensus is reached if a subset $C$, of size at least $T$, of the
-responses can be found such that all of the responses in $C$ are in agreement.
-We call the subset $C$ that has consensus a \textit{consensus set}. Note that
-because the user chooses $T$, they can vary $T$ depending on how strict of a
-guarantee they want on the response. Practically, the threshold is inputted as
-a fraction of $N$; setting it to 0 provides no added security and setting it
-to 1 requires all vantage points to agree. 
+Thus, a successful consensus is reached if a subset $C$, of size at least $T$,
+of the responses can be found such that all of the responses in $C$ are in
+agreement. We call the subset $C$ that has successful consensus a
+\textit{consensus set}. Note that because the user chooses $T$, they can vary
+$T$ depending on how strict of a guarantee they want on the response.
+Practically, the threshold is inputted as a fraction of $N$; setting it to 0
+provides no added security and setting it to 1 requires all vantage points to
+agree. 
 
 We choose the hash function $H$ based on this one key property: $H(R)$ for a
 response $R$ should be representative of the \emph{content} in $R$. Because
