Add "Related Work" section

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -13,6 +13,17 @@
   year = {2008},
   }
 
+@inproceedings{DoubleCheck, 
+  author = {M. Alicherry and A. D. Keromytis}, 
+  booktitle = {{2009 IEEE Symposium on Computers and Communications}}, 
+  title = {{DoubleCheck: Multi-path Verification Against Man-in-the-Middle Attacks}}, 
+  year = {2009}, 
+  pages = {557-563}, 
+  doi = {10.1109/ISCC.2009.5202224}, 
+  ISSN = {1530-1346}, 
+  month = {July}
+  }
+
 @inproceedings{ConfiDNS,
  author = {Poole, Lindsey and Pai, Vivek S.},
  title = {{ConfiDNS: Leveraging Scale and History to Improve DNS Security}},
