--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -3,7 +3,7 @@
 %%% Set these variables appropriately
 %%%
 \newcommand{\AUTHORS}{Rushy Panchal}
-\newcommand{\TITLE}{vHTTP: HTTP Proxy using Vantage-Points}
+\newcommand{\TITLE}{vHTTP: An HTTP Proxy using Vantage-Points}
 \newcommand{\KEYWORDS}{}
 \newcommand{\CONFERENCE}{}
 \newcommand{\PAGENUMBERS}{yes}
