--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -1,3 +1,9 @@
 \section{Evaluation}
 \label{sec:eval}
 
+We evaluate vHTTP on two primary metrics: effectiveness and performance.
+
+\subsection{Effectiveness}
+
+vHTTP's effectiveness is defined as its ability to mitigate different scales of
+MITM attacks.
