--- a/paper/vhttp.tex
+++ b/paper/vhttp.tex
@@ -26,6 +26,7 @@
             margin=1in,centering,truedimen]{geometry}
 }
 
+\usepackage[utf8]{inputenc}
 \usepackage{fancyhdr}
 \usepackage[numbers,sort]{natbib}
 \usepackage{xspace}
