--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -1,9 +1,22 @@
 \section{Evaluation}
 \label{sec:eval}
 
-We evaluate vHTTP on two primary metrics: effectiveness and performance.
+We evaluate vHTTP on two primary metrics: effectiveness, deployability, and
+performance.
 
 \subsection{Effectiveness}
 
 vHTTP's effectiveness is defined as its ability to mitigate different scales of
 MITM attacks.
+
+\subsection{Deployability}
+
+A significant portion of the design considerations made for vHTTP involve the
+feasibility to use it without significant configuration or infrastructure
+changes required. vHTTP works with existing infrastructure, in that it uses
+readily-available free (or private) HTTP proxies as vantage points. More
+importantly, vHTTP can function without changes to the servers being contacted;
+it operates entirely from the client-side. As a consequence, new infrastructure
+or changes to existing infrastructure is not required. Security-conscious users
+can make use of vHTTP as-is and gain extra confidence in the authenticity and
+integrity of response contents.
