--- a/paper/eval.tex
+++ b/paper/eval.tex
@@ -4,6 +4,8 @@
 We evaluate vHTTP on two primary metrics: effectiveness, deployability, and
 performance.
 
+% TODO: effectiveness and performance sections
+
 \subsection{Effectiveness}
 
 vHTTP's effectiveness is defined as its ability to mitigate different scales of
@@ -20,3 +22,5 @@ it operates entirely from the client-side. As a consequence, new infrastructure
 or changes to existing infrastructure is not required. Security-conscious users
 can make use of vHTTP as-is and gain extra confidence in the authenticity and
 integrity of response contents.
+
+\subsection{Performance}
